add ramdom item

--- a/JobPortal.WebApp/Areas/Admin/Views/Account/Login.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Account/Login.cshtml
@@ -50,7 +50,7 @@
 </form>
 
 
-<a asp-area="Employer" asp-action="Login" asp-controller="Account"
+<a href="/employer/login"
    class="btn btn-primary d-grid w-100" style="position:center">Login for Employer</a>
 
 @section Scripts {
