--- a/JobPortal.WebApp/Areas/Employer/Views/Account/Login.cshtml
+++ b/JobPortal.WebApp/Areas/Employer/Views/Account/Login.cshtml
@@ -49,7 +49,7 @@
     </div>
 </form>
 
-<a href="/dang-nhap" class="btn btn-primary d-grid w-100" style="position:center">Login for User</a>
+<a href="/login" class="btn btn-primary d-grid w-100" style="position:center">Login for User</a>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
