--- a/JobPortal.WebApp/Areas/Employer/Views/Shared/_EmployerLoginLayout.cshtml
+++ b/JobPortal.WebApp/Areas/Employer/Views/Shared/_EmployerLoginLayout.cshtml
@@ -124,6 +124,14 @@
             </div>
         </div>
     </div>
+    <!-- / Content -->
+
+    <!-- Register to Employer -->
+    <div class="buy-now">
+        <a href=""
+           target="_blank"
+           class="btn btn-danger btn-buy-now">Register to Employer</a>
+    </div>
 
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
