--- a/JobPortal.WebApp/Views/Home/Price.cshtml
+++ b/JobPortal.WebApp/Views/Home/Price.cshtml
@@ -96,7 +96,7 @@
 	<div class="container-fluid">
 		<div class="row justify-content-center align-items-center">
 			<div class="col-lg-3 feat-img no-padding">
-				<img class="img-fluid" src="~/assets/user/img/pages/f1.jpg" alt="">
+				<img src="~/assets/user/img/pages/f1.jpg" alt="">
 			</div>
 			<div class="col-lg-3 no-padding feat-txt">
 				<h6 class="text-uppercase text-white">Basic & Common Repairs</h6>
@@ -106,7 +106,7 @@
 				</p>
 			</div>
 			<div class="col-lg-3 feat-img no-padding">
-				<img class="img-fluid" src="~/assets/user/img/pages/f2.jpg" alt="">
+				<img src="~/assets/user/img/pages/f2.jpg" alt="">
 			</div>
 			<div class="col-lg-3 no-padding feat-txt">
 				<h6 class="text-uppercase text-white">Basic & Common Repairs</h6>
