--- a/JobPortal.WebApp/Views/Job/Detail.cshtml
+++ b/JobPortal.WebApp/Views/Job/Detail.cshtml
@@ -165,7 +165,7 @@
 					<ul class="cat-list">
 						@foreach (var skill in ViewBag.ListSkills)
 						{
-							<li><a class="justify-content-between d-flex" href="#"><p>@skill.Name</p><span>@skill.JobPopular</span></a></li>
+							<li><a class="justify-content-between d-flex" href="#"><p>@skill.Name</p><span>123</span></a></li>
 						}
 					</ul>
 				</div>
