--- a/JobPortal.WebApp/Views/Shared/_LayoutLogin.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_LayoutLogin.cshtml
@@ -125,13 +125,14 @@
             </div>
         </div>
     </div>
-
     <!-- / Content -->
-    @*<div class="buy-now">
-        <a href="https://themeselection.com/products/sneat-bootstrap-html-admin-template/"
+
+    <!-- Register to Employer -->
+    <div class="buy-now">
+        <a href=""
            target="_blank"
-           class="btn btn-danger btn-buy-now">Upgrade to Pro</a>
-    </div>*@
+           class="btn btn-danger btn-buy-now">Register to Employer</a>
+    </div>
 
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
