--- a/JobPortal.WebApp/Views/Shared/_MenuPartial.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_MenuPartial.cshtml
@@ -14,10 +14,10 @@
 <li><a href="/job">All Jobs</a></li>
 <li><a href="/search">Search</a></li>
 <li><a href="/blog">Blog</a></li>
-<li><a href="/price">Price</a></li>
 <li class="menu-has-children">
     <a href="">Pages</a>
     <ul>
+        <li><a href="/price">Price</a></li>
         <li><a href="/about-us">about us</a></li>
         <li><a href="/contact">contact</a></li>
         <li><a href="/elements">elements</a></li>
@@ -31,16 +31,21 @@
     </li>
     <li>
         <form id="logoutForm" class="form-inline">
-            <a href="/dang-xuat" class="ticker-btn">Logout</a>
+            <a href="/logout" class="ticker-btn">Logout</a>
         </form>
     </li>
+    <li>
+		<form id="logoutForm" class="form-inline">
+            <a href="/register-employer" class="ticker-btn">Register to Employer</a>
+		</form>
+	</li>
 }
 else
 {
     <li>
-        <a href ="/dang-ky" class="ticker-btn">Register</a>
+        <a href ="/register" class="ticker-btn">Register</a>
     </li>
     <li>
-        <a href="/dang-nhap" class="ticker-btn">Login</a>
+        <a href="/login" class="ticker-btn">Login</a>
     </li>
 }
