--- a/JobPortal.WebApp/Views/Account/Register.cshtml
+++ b/JobPortal.WebApp/Views/Account/Register.cshtml
@@ -51,12 +51,12 @@
 
 <p class="text-center">
     <span>New on our platform?</span>
-    <a href="/dang-ky">
+    <a href="/login">
         <span>Create an account</span>
     </a>
 </p>
 
-<a asp-area="Employer" asp-action="Login" asp-controller="Account"
+<a href="/employer/login"
    class="btn btn-primary d-grid w-100" style="position:center">Login for Employer</a>
 
 @section Scripts {
