fix search, register

--- a/JobPortal.WebApp/Views/Search/Index.cshtml
+++ b/JobPortal.WebApp/Views/Search/Index.cshtml
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                 </form>
-                <p class="text-white">@Model.Count() Results found for <span>"Job developer"</span></p>
+                <p class="text-white">@Model.Count() Results found for <span>"@ViewBag.q"</span></p>
             </div>
         </div>
     </div>
