--- a/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLoginLayout.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLoginLayout.cshtml
@@ -112,7 +112,7 @@
                                         </g>
                                     </svg>
                                 </span>
-                                <span class="app-brand-text demo text-body fw-bolder">trang chủ</span>
+                                <span class="app-brand-text demo text-body fw-bolder">home page</span>
                             </a>
                         </div>
 
