--- a/JobPortal.WebApp/Views/Home/Index.cshtml
+++ b/JobPortal.WebApp/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                 @Html.Partial("../Shared/_SearchBoxPartial.cshtml")
                 @if(ViewBag.q == null)
                 {
-                    <p style="font-size: 20px" class="text-white"> <span>Search by tags:</span> Tecnology, Business, Consulting, IT Company, Design, Development</p>
+                    <p style="font-size: 20px" class="text-white"> <span>Search by tags:</span> Developer, Engineer, Tecnology, Support, Manager, Senior, Junior</p>
                 }
                 else
                 {
