--- a/JobPortal.WebApp/Views/Shared/_LayoutAccount.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_LayoutAccount.cshtml
@@ -113,7 +113,7 @@
                                         </g>
                                     </svg>
                                 </span>
-                                <span class="app-brand-text demo text-body fw-bolder">TRANG CHỦ</span>
+                                <span class="app-brand-text demo text-body fw-bolder">home page</span>
                             </a>
                         </div>
 
