--- a/JobPortal.WebApp/Views/Shared/_MenuPartial.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_MenuPartial.cshtml
@@ -36,7 +36,7 @@
     </li>
     <li>
 		<form id="logoutForm" class="form-inline">
-            <a href="/register-employer" class="ticker-btn">Register to Employer</a>
+            <a href="/register-employer/@user.Id" class="ticker-btn">Register to Employer</a>
 		</form>
 	</li>
 }
@@ -44,7 +44,6 @@ else
 {
     <li>
         <a href ="/register" class="ticker-btn">Register</a>
-        @*<a asp-action="" class="ticker-btn">Register</a>*@
     </li>
     <li>
         <a href="/login" class="ticker-btn">Login</a>
