--- a/JobPortal.WebApp/Views/Shared/_Layout.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_Layout.cshtml
@@ -16,6 +16,8 @@
 	<!-- Site Title -->
 	<title>Job Portal</title>
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+	<!-- Favicon -->
+	<link rel="icon" type="image/x-icon" href="~/assets/user/img/favicon.ico" />
 	<!--CSS-->
 	<link rel="stylesheet" href="~/assets/user/css/linearicons.css">
 	<link rel="stylesheet" href="~/assets/user/css/font-awesome.min.css">
