update register emp

--- a/JobPortal.WebApp/Areas/Employer/Views/Account/AccessDenied.cshtml
+++ b/JobPortal.WebApp/Areas/Employer/Views/Account/AccessDenied.cshtml
@@ -4,6 +4,6 @@
 }
 
 <header>
-    <h1 class="text-danger">Cook</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <h1 class="text-danger">You can't access this page</h1>
+    <p class="text-danger">You do not have access to this employer page.</p>
 </header>
