--- a/JobPortal.WebApp/Views/Employer/AccessDenied.cshtml
+++ b/JobPortal.WebApp/Views/Employer/AccessDenied.cshtml
@@ -9,9 +9,9 @@
         <div class="row d-flex align-items-center justify-content-center">
             <div class="about-content col-lg-12">
                 <h1 class="text-white">
-                    Get the fuck out of here bitch !!!
+                    Sorry, you can't access this page
                 </h1>
-                <p class="text-white link-nav"><a href="/">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="#"> 18+ area</a></p>
+                <p class="text-white link-nav"><a href="/">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="/"> Home page</a></p>
             </div>
         </div>
     </div>
