--- a/JobPortal.WebApp/Views/Employer/Fail.cshtml
+++ b/JobPortal.WebApp/Views/Employer/Fail.cshtml
@@ -18,7 +18,7 @@
                     Registration failed !<br />
                     Please add your employer logo
                 </h1>
-                <p class="text-white link-nav"><a href="/">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="/register-employer/@user.Id"> Get back</a></p>
+                <p class="text-white link-nav"><a href="/">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="/register-employer/@user.Id"> Go back</a></p>
             </div>
         </div>
     </div>
