--- a/JobPortal.WebApp/Views/Employer/Success.cshtml
+++ b/JobPortal.WebApp/Views/Employer/Success.cshtml
@@ -12,7 +12,7 @@
                     Registration success !<br />
                     Please wait for confirmation
                 </h1>
-                <p class="text-white link-nav"><a href="/">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="/"> HOME PAGE</a></p>
+                <p class="text-white link-nav"><a href="/">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="/"> Home page</a></p>
             </div>
         </div>
     </div>
