--- a/JobPortal.WebApp/Views/Job/Index.cshtml
+++ b/JobPortal.WebApp/Views/Job/Index.cshtml
@@ -13,11 +13,11 @@
                 <h1 class="text-white">
                     @if (ViewBag.Time == null)
                     {
-                        <span>Sản phẩm mới nhất</span>
+                        <span>Let your dreams fly in the sky of imagination</span>
                     }
                     else
                     {
-                        <span>@ViewBag.Time.Name</span>
+                        <span>@ViewBag.Time.Name job</span>
                     }
                 </h1>
                 <p class="text-white link-nav"><a href="/">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="/job"> Jobs</a></p>
