--- a/JobPortal.WebApp/Areas/Admin/Views/Account/AccessDenied.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Account/AccessDenied.cshtml
@@ -4,6 +4,6 @@
 }
 
 <header>
-    <h1 class="text-danger">Ai cho vô mà vô</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <h1 class="text-danger">You can't access this page</h1>
+    <p class="text-danger">You do not have access to this admin page.</p>
 </header>
