--- a/JobPortal.WebApp/Views/Search/Index.cshtml
+++ b/JobPortal.WebApp/Views/Search/Index.cshtml
@@ -20,7 +20,7 @@
                 @Html.Partial("../Shared/_SearchBoxPartial.cshtml")
                 @if(ViewBag.q == null)
                 {
-                    <p style="font-size: 20px" class="text-white"><span>@Model.Count()</span> IT Jobs For <span> Developers</span></p>
+                    <p style="font-size: 20px" class="text-white"><span>@Model.Count()+</span> IT Jobs For <span> Developers</span></p>
                 }
                 else
                 {
