update layout 2nd

--- a/JobPortal.WebApp/Views/Shared/_Layout.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
 					<a href="/"><img style="height: 70px; width:200px" src="~/assets/user/img/logo.png" alt="" title="" /></a>
 				</div>
 				<!-- Start nav-menu-container -->
-				<nav id="nav-menu-container">
+				<nav id="nav-menu">
 					<ul class="nav-menu">
 
 						<!--Menu-->
