--- a/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -132,7 +132,7 @@
                     </li>
 
                     <!-- Roles & User -->
-                    <!-- User Setting-->
+                    <!-- Users Setting-->
                     <li class="menu-header small text-uppercase">
                         <span class="menu-header-text"> User & Roles </span>
                     </li>
@@ -152,7 +152,6 @@
                                     <div data-i18n="Notifications">Employer Management</div>
                                 </a>
                             </li>
-
                         </ul>
                     </li>
 
