--- a/JobPortal.WebApp/Areas/Employer/Views/Shared/_EmployerLayout.cshtml
+++ b/JobPortal.WebApp/Areas/Employer/Views/Shared/_EmployerLayout.cshtml
@@ -142,19 +142,46 @@
                         </a>
                     </li>
 
+                    <!--  Applicants -->
+                    <li class="menu-header small text-uppercase">
+                        <span class="menu-header-text"> Applicants </span>
+                    </li>
+                    <!-- Applicant Setting-->
+                    <li class="menu-item">
+                        <a href="javascript:void(0);" class="menu-link menu-toggle">
+                            <i class='menu-icon tf-icons bx bx-user-circle'></i>
+                            <div data-i18n="Applicant Settings">Applicant Settings</div>
+                        </a>
+                        <ul class="menu-sub">
+                            <li class="menu-item">
+                                <a href="/employer/apply/@user.Id/3" class="menu-link" target="_blank">
+                                    <div data-i18n="Applicant">All applicants</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="/employer/apply/@user.Id/1" class="menu-link" target="_blank">
+                                    <div data-i18n="Applicant">Waiting applicants</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="/employer/apply/@user.Id/2" class="menu-link" target="_blank">
+                                    <div data-i18n="Applicant">Accepted applicants</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="/employer/apply/@user.Id/0" class="menu-link" target="_blank">
+                                    <div data-i18n="Applicant">Denied applicants</div>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+
                     <!-- Contents -->
                     <li class="menu-header small text-uppercase"><span class="menu-header-text">Management</span></li>
                     <li class="menu-item">
                         <a href="/employer/job" class="menu-link">
                             <i class="menu-icon tf-icons bx bx-table"></i>
                             <div data-i18n="Tables">Jobs</div>
-                        </a>
-                    </li>
-
-                    <li class="menu-item">
-                        <a href="/employer/applicant" class="menu-link">
-                            <i class="menu-icon tf-icons bx bx-table"></i>
-                            <div data-i18n="Tables">Applicants</div>
                         </a>
                     </li>
 
