--- a/JobPortal.WebApp/Views/Shared/_MenuPartial.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_MenuPartial.cshtml
@@ -52,4 +52,7 @@ else
     <li>
         <a href="/login" class="ticker-btn">Login</a>
     </li>
+    <li>
+        <a href="/employer/login" class="ticker-btn">For Employer</a>
+    </li>
 }
